--- a/img_hello.ipynb
+++ b/img_hello.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -32,7 +32,7 @@
     "file_list = glob.glob(image_dir + '*')\n",
     "\n",
     "# open one image and convert it to YCbCr type\n",
-    "img = open_convert(file_list[1], mode='YCbCr')\n",
+    "img = open_convert(file_list[9], mode='YCbCr')\n",
     "\n",
     "# get the laplacian pyramid of this image\n",
     "lplist = laplacian_pyramid(img, 3)\n",
@@ -42,14 +42,14 @@
     "#     print lplist[i].shape\n",
     "#     show_image(lplist[i], mode='YCbCr')\n",
     "\n",
-    "img = lecun_lcn(img, kernel_shape=9, threshold=1e-4)\n",
+    "img = lecun_lcn(lplist[0], kernel_shape=9, threshold=1e-4)\n",
     "img = np.uint8(img)\n",
     "show_image(img, mode='YCbCr')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
