add cnn train version alpha

--- a/img_hello.ipynb
+++ b/img_hello.ipynb
@@ -21,30 +21,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "(240, 320, 3)\n",
+      "(120, 160, 3)\n",
+      "(60, 80, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# get the path to the image files\n",
-    "file_list = glob.glob(image_dir + '*')\n",
+    "image_list = glob.glob(image_dir + '*')\n",
     "\n",
     "# open one image and convert it to YCbCr type\n",
-    "img = open_convert(file_list[9], mode='YCbCr')\n",
+    "img = open_convert(image_list[9], mode='YCbCr')\n",
     "\n",
     "# get the laplacian pyramid of this image\n",
     "lplist = laplacian_pyramid(img, 3)\n",
     "\n",
-    "# print len(lplist)\n",
-    "# for i in xrange(3):\n",
-    "#     print lplist[i].shape\n",
-    "#     show_image(lplist[i], mode='YCbCr')\n",
+    "print len(lplist)\n",
+    "for i in xrange(3):\n",
+    "    print lplist[i].shape\n",
+    "    show_image(lplist[i], mode='YCbCr')\n",
     "\n",
-    "img = lecun_lcn(lplist[0], kernel_shape=9, threshold=1e-4)\n",
-    "img = np.uint8(img)\n",
-    "show_image(img, mode='YCbCr')\n"
+    "# img = lecun_lcn(img, kernel_shape=9, threshold=1e-4)\n",
+    "# img = np.uint8(img)\n",
+    "# show_image(img, mode='YCbCr')\n"
    ]
   },
   {
