--- a/tf_hello.ipynb
+++ b/tf_hello.ipynb
@@ -2,69 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-2. -1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Enter an interactive TensorFlow Session.\n",
-    "import tensorflow as tf\n",
-    "sess = tf.InteractiveSession()\n",
-    "\n",
-    "x = tf.Variable([1.0, 2.0])\n",
-    "a = tf.constant([3.0, 3.0])\n",
-    "\n",
-    "# Initialize 'x' using the run() method of its initializer op.\n",
-    "x.initializer.run()\n",
-    "\n",
-    "# Add an op to subtract 'a' from 'x'.  Run it and print the result\n",
-    "sub = tf.sub(x, a)\n",
-    "print(sub.eval())\n",
-    "# ==> [-2. -1.]\n",
-    "\n",
-    "# Close the Session when we're done.\n",
-    "sess.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "input1 = tf.constant(3.0)\n",
-    "input2 = tf.constant(2.0)\n",
-    "input3 = tf.constant(5.0)\n",
-    "intermed = tf.add(input2, input3)\n",
-    "mul = tf.mul(input1, intermed)\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "  result = sess.run(mul)\n",
-    "  print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +16,9 @@
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
       "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
       "Download Done!\n",
-      "('Accuarcy on Test-dataset: ', 0.9188)\n"
+      "step 0, training accuracy 0.08\n",
+      "step 100, training accuracy 0.88\n",
+      "step 200, training accuracy 0.94\n"
      ]
     }
    ],
@@ -86,74 +26,25 @@
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
-    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
-    "\n",
-    "x = tf.placeholder(tf.float32, [None, 784])\n",
-    "\n",
-    "# paras\n",
-    "W = tf.Variable(tf.zeros([784, 10]))\n",
-    "b = tf.Variable(tf.zeros([10]))\n",
-    "\n",
-    "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
-    "y_ = tf.placeholder(tf.float32, [None, 10])\n",
-    "\n",
-    "# loss func\n",
-    "cross_entropy = -tf.reduce_sum(y_ * tf.log(y))\n",
-    "\n",
-    "train_step = tf.train.GradientDescentOptimizer(0.01).minimize(cross_entropy)\n",
-    "\n",
-    "# init\n",
-    "init = tf.initialize_all_variables()\n",
-    "\n",
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
-    "\n",
-    "# train\n",
-    "for i in range(1000):\n",
-    "    batch_xs, batch_ys = mnist.train.next_batch(100)\n",
-    "    sess.run(train_step, feed_dict={x: batch_xs, y_: batch_ys})\n",
-    "\n",
-    "correct_prediction = tf.equal(tf.arg_max(y, 1), tf.arg_max(y_, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "\n",
-    "print(\"Accuarcy on Test-dataset: \", sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))\n",
-    "\n",
-    "sess.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "\n",
-    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
-    "\n",
-    "sess = tf.InteractiveSession()\n",
-    "\n",
-    "def weight_variable(shape):\n",
-    "  initial = tf.truncated_normal(shape, stddev=0.1)\n",
-    "  return tf.Variable(initial)\n",
+    "def weight_varible(shape):\n",
+    "    initial = tf.truncated_normal(shape, stddev=0.1)\n",
+    "    return tf.Variable(initial)\n",
     "\n",
     "def bias_variable(shape):\n",
-    "  initial = tf.constant(0.1, shape=shape)\n",
-    "  return tf.Variable(initial)\n",
+    "    initial = tf.constant(0.1, shape=shape)\n",
+    "    return tf.Variable(initial)\n",
+    "\n",
+    "def conv2d(x, W):\n",
+    "    return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')\n",
+    "\n",
+    "def max_pool_2x2(x):\n",
+    "    return tf.nn.max_pool(x, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "\n",
+    "\n",
+    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
+    "print(\"Download Done!\")\n",
+    "\n",
+    "sess = tf.InteractiveSession()\n",
     "\n",
     "# paras\n",
     "W_conv1 = weight_varible([5, 5, 1, 32])\n",
@@ -200,7 +91,7 @@
     "\n",
     "sess.run(tf.initialize_all_variables())\n",
     "\n",
-    "for i in range(20000):\n",
+    "for i in range(201):\n",
     "    batch = mnist.train.next_batch(50)\n",
     "\n",
     "    if i % 100 == 0:\n",
@@ -209,7 +100,94 @@
     "    train_step.run(feed_dict = {x: batch[0], y_: batch[1], keep_prob: 0.5})\n",
     "\n",
     "# accuacy on test\n",
-    "print(\"test accuracy %g\"%(accuracy.eval(feed_dict={x: mnist.test.images, y: mnist.test.labels, keep_prob: 1.0})))"
+    "# print(\"test accuracy %g\"%(accuracy.eval(feed_dict={x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0})))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "Download Done!\n",
+      "('Accuarcy on Test-dataset: ', 0.91579998)\n"
+     ]
+    }
+   ],
+   "source": [
+    "__author__ = 'chapter'\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "\n",
+    "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
+    "print(\"Download Done!\")\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, [None, 784])\n",
+    "\n",
+    "# paras\n",
+    "W = tf.Variable(tf.zeros([784, 10]))\n",
+    "b = tf.Variable(tf.zeros([10]))\n",
+    "\n",
+    "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
+    "y_ = tf.placeholder(tf.float32, [None, 10])\n",
+    "\n",
+    "# loss func\n",
+    "cross_entropy = -tf.reduce_sum(y_ * tf.log(y))\n",
+    "\n",
+    "train_step = tf.train.GradientDescentOptimizer(0.01).minimize(cross_entropy)\n",
+    "\n",
+    "# init\n",
+    "init = tf.initialize_all_variables()\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "\n",
+    "# train\n",
+    "for i in range(1000):\n",
+    "    batch_xs, batch_ys = mnist.train.next_batch(100)\n",
+    "    sess.run(train_step, feed_dict={x: batch_xs, y_: batch_ys})\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.arg_max(y, 1), tf.arg_max(y_, 1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
+    "\n",
+    "print(\"Accuarcy on Test-dataset: \", sess.run(accuracy, feed_dict={x: mnist.test.images, y_: mnist.test.labels}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21.0, 7.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "input1 = tf.constant(3.0)\n",
+    "input2 = tf.constant(2.0)\n",
+    "input3 = tf.constant(5.0)\n",
+    "intermed = tf.add(input2, input3)\n",
+    "mul = tf.mul(input1, intermed)\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "  result = sess.run([mul, intermed])\n",
+    "  print(result)"
    ]
   },
   {
